[gd_scene load_steps=5 format=3 uid="uid://jc68a8df5n33"]

[ext_resource type="Theme" uid="uid://dv0cg7hfn5oc8" path="res://themes/Dialogue theme.tres" id="1_h17cg"]
[ext_resource type="Script" path="res://script/dialogue_ui.gd" id="2_4hi6b"]
[ext_resource type="Texture2D" uid="uid://v3atmcnpgvnm" path="res://images-removebg-preview (2).png" id="3_888k1"]

[sub_resource type="LabelSettings" id="LabelSettings_6eovl"]
font_size = 25

[node name="Dialogue UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_h17cg")
script = ExtResource("2_4hi6b")

[node name="Dialogue box" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(200, 50)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 472.0
grow_horizontal = 2
grow_vertical = 2

[node name="DialogueLine" type="RichTextLabel" parent="Dialogue box"]
layout_mode = 2
bbcode_enabled = true
text = "[wave]This is a line of [shake]dialogue[/shake][wave]"

[node name="speaker box" type="Control" parent="."]
custom_minimum_size = Vector2(200, 50)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 422.0
grow_horizontal = 2
grow_vertical = 2

[node name="Polygon2D" type="Polygon2D" parent="speaker box"]
position = Vector2(0, -1)
color = Color(0.333333, 0.537255, 1, 0.588235)
polygon = PackedVector2Array(0, 0, 180, 0, 200, 50, 0, 50)

[node name="SpeakerLabel" type="Label" parent="speaker box"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 34.0
offset_top = 4.0
offset_right = 34.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
text = "Name"
label_settings = SubResource("LabelSettings_6eovl")

[node name="Control" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="next_button" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 982.0
offset_top = 504.0
offset_right = 80.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_888k1")

[connection signal="pressed" from="next_button" to="." method="_on_next_button_pressed"]
